fix: conserta os testes unitários e de integração