@@ -1,27 +1,20 @@
 package com.tiago.UmPoucoDeTudo.service;
 
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Optional;
-
+import com.tiago.UmPoucoDeTudo.model.Story;
+import com.tiago.UmPoucoDeTudo.model.Tag;
+import com.tiago.UmPoucoDeTudo.repository.StoryRepository;
+import com.tiago.UmPoucoDeTudo.responses.StoryResponse;
+import com.tiago.UmPoucoDeTudo.util.*;
 import org.assertj.core.api.Assertions;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.ArgumentMatchers;
-import org.mockito.BDDMockito;
-import org.mockito.InjectMocks;
-import org.mockito.Mock;
-import org.mockito.Mockito;
+import org.mockito.*;
 import org.mockito.junit.jupiter.MockitoExtension;
 
-import com.tiago.UmPoucoDeTudo.model.Story;
-import com.tiago.UmPoucoDeTudo.model.Tag;
-import com.tiago.UmPoucoDeTudo.repository.StoryRepository;
-import com.tiago.UmPoucoDeTudo.util.StoryPostRequestBodyTesterCreator;
-import com.tiago.UmPoucoDeTudo.util.StoryPutRequestBodyTesterCreator;
-import com.tiago.UmPoucoDeTudo.util.StoryTesterCreator;
-import com.tiago.UmPoucoDeTudo.util.TagTesterCreator;
+import java.util.ArrayList;
+import java.util.List;
+import java.util.Optional;
 
 @ExtendWith(MockitoExtension.class)
 @DisplayName("Teste do service StoryService")
@@ -35,58 +28,60 @@ public class StoryServiceTest {
 
     @Test
     @DisplayName("Teste: pegar todas as stories existentes")
-    void getAll_ReturnListOfStories_WhenSuccessful(){
+    void getAll_ReturnListOfStories_WhenSuccessful() {
 
-        BDDMockito.when(storyRepositoryMock.findAll()).thenReturn(List.of(StoryTesterCreator.createStory()));
+        BDDMockito.when(storyRepositoryMock.findAll()).thenReturn(List.of(StoryTesterCreator.createStory(TagTesterCreator.createTagWithId())));
 
-        List<Story> stories = storyService.getAll();
+        List<StoryResponse> stories = storyService.getAll();
 
         Assertions.assertThat(stories)
                 .isNotNull()
                 .isNotEmpty();
 
-        Assertions.assertThat(stories.get(0))
+        Story story = StoryTesterCreator.createStory(TagTesterCreator.createTagWithId());
+
+        Assertions.assertThat(stories.getFirst())
                 .isNotNull()
-                .isEqualTo(StoryTesterCreator.createStory());
+                .isEqualTo(StoryResponseTesterCreator.convertToStoryResponse(story));
 
     }
 
     @Test
     @DisplayName("Teste: pegar tag pelo id")
-    void getById_ReturnStory_WhenSuccessful(){
+    void getById_ReturnStory_WhenSuccessful() {
 
         BDDMockito.when(storyRepositoryMock.findById(ArgumentMatchers.anyLong()))
                 .thenReturn(Optional.of(StoryTesterCreator.createStory()));
 
-        Story story = storyService.getById(StoryTesterCreator.getDefaultId());
-        
+        StoryResponse story = storyService.getById(1L);
+
         Assertions.assertThat(story)
                 .isNotNull()
-                .isEqualTo(StoryTesterCreator.createStory());
+                .isEqualTo(StoryResponseTesterCreator.convertToStoryResponse(StoryTesterCreator.createStory()));
 
     }
 
     @Test
     @DisplayName("Teste: criar nova story")
-    void createStory_ReturnStory_WhenSuccessful(){
+    void createStory_ReturnStory_WhenSuccessful() {
 
         BDDMockito.when(storyRepositoryMock.save(ArgumentMatchers.any(Story.class)))
-                        .thenReturn(StoryTesterCreator.createStory());
+                .thenReturn(StoryTesterCreator.createStory());
 
-        Story story = storyService.createStory(StoryPostRequestBodyTesterCreator.createStoryPostRequestBody());
+        StoryResponse story = storyService.createStory(StoryPostRequestBodyTesterCreator.createStoryPostRequestBody());
 
         Assertions.assertThat(story)
                 .isNotNull()
-                .isEqualTo(StoryTesterCreator.createStory());
+                .isEqualTo(StoryResponseTesterCreator.convertToStoryResponse(StoryTesterCreator.createStory()));
 
     }
 
     @Test
     @DisplayName("Teste: atualizar story")
-    void update_returnVoid_WhenSuccessful(){
+    void update_returnVoid_WhenSuccessful() {
 
         Mockito.when(storyRepositoryMock.findById(StoryTesterCreator.getDefaultId()))
-                        .thenReturn(Optional.of(StoryTesterCreator.createStory()));
+                .thenReturn(Optional.of(StoryTesterCreator.createStory()));
 
         storyService.replace(StoryPutRequestBodyTesterCreator.createStoryPutRequestBody(
                 StoryTesterCreator.getDefaultId(),
@@ -96,12 +91,12 @@ public class StoryServiceTest {
         ));
 
         BDDMockito.verify(storyRepositoryMock).save(ArgumentMatchers.any(Story.class));
-                        
+
     }
 
     @Test
     @DisplayName("Teste: apagar story")
-    void deleteStoryById_returnVoid_WhenSuccessful(){
+    void deleteStoryById_returnVoid_WhenSuccessful() {
 
         Tag createdTag = TagTesterCreator.createTag();
         Story createdStory = StoryTesterCreator.createStory(createdTag);
