@@ -1,8 +1,12 @@
 package com.tiago.UmPoucoDeTudo.service;
 
-import java.util.List;
-import java.util.Optional;
-
+import com.tiago.UmPoucoDeTudo.model.Story;
+import com.tiago.UmPoucoDeTudo.model.Tag;
+import com.tiago.UmPoucoDeTudo.model.User;
+import com.tiago.UmPoucoDeTudo.repository.TagRepository;
+import com.tiago.UmPoucoDeTudo.repository.UserRepository;
+import com.tiago.UmPoucoDeTudo.responses.TagResponse;
+import com.tiago.UmPoucoDeTudo.util.*;
 import org.assertj.core.api.Assertions;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
@@ -13,11 +17,9 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
-import com.tiago.UmPoucoDeTudo.model.Tag;
-import com.tiago.UmPoucoDeTudo.repository.TagRepository;
-import com.tiago.UmPoucoDeTudo.util.TagPostRequestBodyTesterCreator;
-import com.tiago.UmPoucoDeTudo.util.TagPutRequestBodyTesterCreator;
-import com.tiago.UmPoucoDeTudo.util.TagTesterCreator;
+import java.time.LocalDate;
+import java.util.List;
+import java.util.Optional;
 
 @ExtendWith(MockitoExtension.class)
 @DisplayName("Teste do service TagService")
@@ -29,22 +31,32 @@ public class TagServiceTest {
     @Mock
     private TagRepository tagRepositoryMock;
 
+    @Mock
+    private StoryService storyServiceMock;
+
+    @Mock
+    private UserRepository userRepositoryMock;
+
     @Test
     @DisplayName("Teste: pegar todas as tags existentes")
     void getAll_ReturnListOfTags_WhenSuccessful() {
 
-        BDDMockito.when(tagRepositoryMock.findAll())
-                .thenReturn(List.of(TagTesterCreator.createTag()));
+        Tag tag = TagTesterCreator.createTag(UserTesterCreator.createUser(), List.of(StoryTesterCreator.createStory()));
 
-        List<Tag> tagList = tagService.getAll();
+        BDDMockito.when(tagRepositoryMock.findByUser(ArgumentMatchers.any(User.class)))
+                .thenReturn(List.of(tag));
 
+        BDDMockito.when(storyServiceMock.toDTO(ArgumentMatchers.any(Story.class)))
+                .thenReturn(StoryResponseTesterCreator.convertToStoryResponse(StoryTesterCreator.createStory()));
+
+        List<TagResponse> tagList = tagService.getAll(UserTesterCreator.createUser());
         Assertions.assertThat(tagList)
                 .isNotNull()
                 .isNotEmpty();
 
-        Assertions.assertThat(tagList.get(0))
+        Assertions.assertThat(tagList.getFirst())
                 .isNotNull()
-                .isEqualTo(TagTesterCreator.createTag());
+                .isEqualTo(TagResponseTesterCreator.convertToTagResponse(tag, List.of(StoryTesterCreator.createStory())));
 
     }
 
@@ -52,14 +64,19 @@ public class TagServiceTest {
     @DisplayName("Teste: pegar tag pelo id")
     void getById_ReturnTag_WhenSuccessful() {
 
-        BDDMockito.when(tagRepositoryMock.findById(TagTesterCreator.getDefaultId()))
-                .thenReturn(Optional.of(TagTesterCreator.createTag()));
+        Tag tag = TagTesterCreator.createTag(UserTesterCreator.createUser(), List.of(StoryTesterCreator.createStory()));
 
-        Tag tag = tagService.getById(TagTesterCreator.getDefaultId());
+        BDDMockito.when(tagRepositoryMock.findByIdAndUser(ArgumentMatchers.anyLong(), ArgumentMatchers.any(User.class)))
+                .thenReturn(Optional.of(tag));
 
-        Assertions.assertThat(tag)
+        BDDMockito.when(storyServiceMock.toDTO(ArgumentMatchers.any(Story.class)))
+                .thenReturn(StoryResponseTesterCreator.convertToStoryResponse(StoryTesterCreator.createStory()));
+
+        TagResponse tagResponse = tagService.getById(TagTesterCreator.getDefaultId(), UserTesterCreator.createUser());
+
+        Assertions.assertThat(tagResponse)
                 .isNotNull()
-                .isEqualTo(TagTesterCreator.createTag());
+                .isEqualTo(TagResponseTesterCreator.convertToTagResponse(tag, List.of(StoryTesterCreator.createStory())));
 
     }
 
@@ -67,14 +84,16 @@ public class TagServiceTest {
     @DisplayName("Teste: criar nova tag")
     void createTag_ReturnTag_WhenSuccessful() {
 
-        BDDMockito.when(tagRepositoryMock.save(TagTesterCreator.createTag()))
-                .thenReturn(TagTesterCreator.createTag());
+        Tag tag = TagTesterCreator.createTagWithId();
 
-        Tag tag = tagService.createTag(TagPostRequestBodyTesterCreator.createTagPostRequestBody());
+        BDDMockito.when(tagRepositoryMock.save(ArgumentMatchers.any(Tag.class)))
+                .thenReturn(tag);
 
-        Assertions.assertThat(tag)
+        TagResponse tagResponse = tagService.createTag(TagPostRequestBodyTesterCreator.createTagPostRequestBody(), UserTesterCreator.createUser());
+
+        Assertions.assertThat(tagResponse)
                 .isNotNull()
-                .isEqualTo(TagTesterCreator.createTag());
+                .isEqualTo(TagResponseTesterCreator.convertToTagResponse(tag));
 
     }
 
@@ -82,11 +101,11 @@ public class TagServiceTest {
     @DisplayName("Teste: atualizar tag")
     void replace_ReturnVoid_WhenSuccessful() {
 
-        BDDMockito.when(tagRepositoryMock.findById(TagTesterCreator.getDefaultId()))
+        BDDMockito.when(tagRepositoryMock.findByIdAndUser(ArgumentMatchers.anyLong(), ArgumentMatchers.any(User.class)))
                 .thenReturn(Optional.of(TagTesterCreator.createTagWithId()));
 
         tagService.replace(TagPutRequestBodyTesterCreator.createTagPutRequestBody(TagTesterCreator.getDefaultId(),
-                "tagUpdatedTest"));
+                "tagUpdatedTest", LocalDate.now()), UserTesterCreator.createUser());
 
         BDDMockito.verify(tagRepositoryMock)
                 .save(ArgumentMatchers.any(Tag.class));
@@ -97,12 +116,18 @@ public class TagServiceTest {
     @DisplayName("Teste: apaga tag pelo id")
     void deleteTagById_ReturnVoid_WhenSuccessful() {
 
-        BDDMockito.when(tagRepositoryMock.findById(TagTesterCreator.getDefaultId()))
-                .thenReturn(Optional.of(TagTesterCreator.createTag()));
+        User user = UserTesterCreator.createUser();
+        user.setId(1L);
+        Tag tag = TagTesterCreator.createTagWithId();
+        user.getTags().add(tag);
 
-        tagService.deleteTagById(TagTesterCreator.getDefaultId());
+        BDDMockito.when(userRepositoryMock.findById(ArgumentMatchers.anyLong()))
+                .thenReturn(Optional.of(user));
 
-        BDDMockito.verify(tagRepositoryMock).deleteById(TagTesterCreator.getDefaultId());
+        BDDMockito.when(tagRepositoryMock.findByIdAndUser(ArgumentMatchers.anyLong(), ArgumentMatchers.any(User.class)))
+                .thenReturn(Optional.of(tag));
+
+        tagService.deleteTagById(tag.getId(), user);
 
     }
 
